Filter and Autoscroll for LogView

--- a/Source/AlephNote.App/WPF/Windows/LogWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/LogWindow.xaml
@@ -11,7 +11,7 @@
 		d:DataContext="{d:DesignInstance windows:LogWindowViewmodel}"
 		WindowStartupLocation="CenterOwner"
 		Icon="/Resources/IconMain.png"
-		MinWidth="200" MinHeight="200"
+		MinWidth="700" MinHeight="400"
 		Height="500" Width="950"
 		Title="LogWindow">
 	<Window.Resources>
@@ -82,20 +82,39 @@
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition Width="*" />
-				<ColumnDefinition Width="Auto" />
-				<ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
 			</Grid.ColumnDefinitions>
+            
 			<TextBlock Grid.Column="0" Text="Eventlog" FontWeight="Bold" FontSize="24" Margin="20,5" HorizontalAlignment="Left" />
+            
 			<Button    Grid.Column="1" Content="Export" VerticalAlignment="Top" Margin="4,1" Click="ButtonExport_Click" />
 			<Button    Grid.Column="2" Content="Import" VerticalAlignment="Top" Margin="4,1" Click="ButtonImport_Click" Visibility="{Binding IsDebugMode, Converter={conv:BoolToVisibility}}" />
-			<StackPanel Grid.Column="4" Orientation="Vertical">
+
+            <Grid Grid.Column="4" Margin="10,2,10,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" MinWidth="125" />
+                </Grid.ColumnDefinitions>
+                <CheckBox Grid.Column="1" Grid.Row="1" Margin="0,2,0,2" Content="Autoscroll" IsChecked="{Binding Autoscroll}" />
+                <Label    Grid.Column="0" Grid.Row="0"                  Content="Filter"/>
+                <ComboBox Grid.Column="1" Grid.Row="0"  Margin="0,2,0,2" SelectedIndex="{Binding SelectedFilterIndex}" ItemsSource="{Binding Filters}" />
+            </Grid>
+            
+            <StackPanel Grid.Column="5" Orientation="Vertical">
 				<CheckBox Content="Show debug events" Margin="10,2,10,0" IsChecked="{Binding ShowDebug}"                                 Visibility="{Binding IsDebugMode, Converter={conv:BoolToVisibility}}" />
 				<CheckBox Content="Show trace events" Margin="10,2,10,0" IsChecked="{Binding ShowTrace}" IsEnabled="{Binding ShowDebug}" Visibility="{Binding IsDebugMode, Converter={conv:BoolToVisibility}}" />
 			</StackPanel>
-			<Button    Grid.Column="5" Grid.Row="0" Content="Clear" VerticalAlignment="Bottom" HorizontalAlignment="Right" Padding="0" Margin="10,4" Command="{Binding ClearCommand}" />
+            
+			<Button    Grid.Column="6" Grid.Row="0" Content="Clear" VerticalAlignment="Bottom" HorizontalAlignment="Right" Padding="0" Margin="10,4" Command="{Binding ClearCommand}" />
 		</Grid>
 
-		<ListView ItemsSource="{Binding LogView}" SelectedItem="{Binding SelectedLog}" Grid.Row="1" >
+		<ListView x:Name="MainListView" ItemsSource="{Binding LogView}" SelectedItem="{Binding SelectedLog}" Grid.Row="1" >
 			<ListView.Resources>
 				<Style TargetType="ListViewItem">
 					<Style.Triggers>
