Upgrade to .Net 4.8 (and .Net Standard 2.0) (needed for StandardNotes 004 migration)
--> references #137
--> references #182

--- a/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewFlat.xaml
@@ -4,12 +4,12 @@
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 xmlns:self="clr-namespace:AlephNote.WPF.Controls"
-			 xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=CSharpUtils"
+			 xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=WPFUtils"
              xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
 			 xmlns:pi="clr-namespace:AlephNote.PluginInterface;assembly=AlephNote.PluginInterface"
              xmlns:locconv="clr-namespace:AlephNote.WPF.Converter"
 			 xmlns:settings="clr-namespace:AlephNote.Common.Settings.Types;assembly=AlephNote.Common"
-             xmlns:services="clr-namespace:MSHC.WPF.Services;assembly=CSharpUtils"
+             xmlns:services="clr-namespace:MSHC.WPF.Services;assembly=WPFUtils"
 			 xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
 			 xmlns:notesView="clr-namespace:AlephNote.WPF.Controls.NotesView"
 			 mc:Ignorable="d" 
