--- a/Source/AlephNote.App/WPF/Windows/ThemeEditor.xaml
+++ b/Source/AlephNote.App/WPF/Windows/ThemeEditor.xaml
@@ -5,8 +5,8 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="clr-namespace:AlephNote.WPF.Windows"
 		xmlns:scinet="clr-namespace:ScintillaNET;assembly=ScintillaNET"
-        xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=CSharpUtils"
-        xmlns:proxy="clr-namespace:MSHC.WPF.BindingProxies;assembly=CSharpUtils"
+        xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=WPFUtils"
+        xmlns:proxy="clr-namespace:MSHC.WPF.BindingProxies;assembly=WPFUtils"
 		mc:Ignorable="d"
 		WindowStartupLocation="CenterOwner"
 		Title="AlephNote [Theme Editor]"
