--- a/Source/AlephNote.App/WPF/Controls/GlobalSearchTextBox.xaml
+++ b/Source/AlephNote.App/WPF/Controls/GlobalSearchTextBox.xaml
@@ -4,10 +4,10 @@
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 xmlns:local="clr-namespace:AlephNote.WPF.Controls"
-			 xmlns:services="clr-namespace:MSHC.WPF.Services;assembly=CSharpUtils"
+			 xmlns:services="clr-namespace:MSHC.WPF.Services;assembly=WPFUtils"
 			 xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
-			 xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=CSharpUtils"
-			 xmlns:controls="clr-namespace:MSHC.WPF.Controls;assembly=CSharpUtils"
+			 xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=WPFUtils"
+			 xmlns:controls="clr-namespace:MSHC.WPF.Controls;assembly=WPFUtils"
 			 mc:Ignorable="d" 
 			 d:DesignHeight="22" d:DesignWidth="300">
 	<Grid x:Name="LayoutRoot">
