--- a/Source/AlephNote.App/WPF/Windows/AboutWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/AboutWindow.xaml
@@ -54,10 +54,14 @@
 			<TextBlock Text="DiffPlex"                     Tag="https://github.com/mmanela/diffplex"             Foreground="Blue" TextDecorations="Underline" Cursor="Hand" MouseDown="Hyperlink_Clicked" />
 
 			<StackPanel Orientation="Horizontal">
-				<TextBlock Text="CSharpUtils "         Tag="https://github.com/Mikescher/CSharpUtils"        Foreground="Blue" TextDecorations="Underline" Cursor="Hand" MouseDown="Hyperlink_Clicked" />
-				<TextBlock Text="{Binding CSUtilsVersion, StringFormat=v{0}}" />
-			</StackPanel>
-		</StackPanel>
+				<TextBlock Text="CSharpUtils (LanguageUtils) "         Tag="https://github.com/Mikescher/CSharpUtils"        Foreground="Blue" TextDecorations="Underline" Cursor="Hand" MouseDown="Hyperlink_Clicked" />
+                <TextBlock Text="{Binding LanguageUtilsVersion, StringFormat=v{0}}" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="CSharpUtils (WPFUtils) "         Tag="https://github.com/Mikescher/CSharpUtils"        Foreground="Blue" TextDecorations="Underline" Cursor="Hand" MouseDown="Hyperlink_Clicked" />
+                <TextBlock Text="{Binding WPFUtilsVersion, StringFormat=v{0}}" />
+            </StackPanel>
+        </StackPanel>
 
 		<StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="3">
 			<Image Source="/Resources/github.png" Stretch="UniformToFill" Width="16" Height="16" Margin="0,0,5,0" Tag="https://github.com/Mikescher/AlephNote" MouseDown="Hyperlink_Clicked" Cursor="Hand" />
